other/m-q/pdb-minavailable/ss-good.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: goodss01
  namespace: pdb-minavailable-ns
spec:
  selector:
    matchLabels:
      app: bb1
  replicas: 2
  template:
    metadata:
      labels:
        app: bb1
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: busbyox
        image: busybox:1.35
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: goodss02
spec:
  selector:
    matchLabels:
      app: bb2
  replicas: 1
  template:
    metadata:
      labels:
        app: bb2
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: busbyox
        image: busybox:1.35
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: goodss03
  namespace: pdb-minavailable-ns
spec:
  selector:
    matchLabels:
      app: bb3
  replicas: 1
  template:
    metadata:
      labels:
        app: bb3
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: busbyox
        image: busybox:1.35
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: goodss04
  namespace: pdb-minavailable-ns
spec:
  selector:
    matchLabels:
      app: bb4
  replicas: 0
  template:
    metadata:
      labels:
        app: bb4
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: busbyox
        image: busybox:1.35
