other/m-q/pdb-minavailable/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: pdb-minavailable-check
  resources:
  - name: bad-pdb
    values:
      request.operation: CREATE
  rules:
  - name: pdb-minavailable
    values:
      minavailable: "2"
